--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^5.10.0",
     "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-react": "^7.21.5",
@@ -26,6 +28,7 @@
     "react-dom": "^16.8.0"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.0"
   }
 }
