--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,16 @@
   },
   "files.exclude": {
     "node_modules": true,
-    "package-lock.json": true
+    "package-lock.json": true,
+    "dist": true
   },
   "[javascript]": {
     "editor.tabSize": 2
   },
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "launch": {
+
+    "configurations": [],
+    "compounds": []
+  }
 }
