--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-styled-components": "^1.9.2",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^5.10.0",
     "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-react": "^7.21.5",
