--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "styled-components": "^4.1.1"
