--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "styled-components": "^4.1.1"
