--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint:js": "esint . && prettier-eslint --list-different **/*.js",
+    "lint:js": "eslint . && prettier-eslint --list-different **/*.js",
     "lint:css": "stylelint **/*.js",
-    "lint": "npm run list:js && npm run linst:css",
+    "lint": "npm run lint:js && npm wrun lint:css",
     "format": "prettier-eslint --write **/*.js",
     "build": "webpack --config webpack.config.js",
     "dev": "webpack-dev-server --config webpack.config.js --open"
@@ -55,7 +55,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "eslint ."
+      "pre-commit": "npm run lint"
     }
   }
 }
